# ZenithAlgo

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCKER_INSTALL.md  LICENSE  Makefile  POSTGRES_SETUP.md  README.md  ROADMAP.md  RUNNING.md  check_network.py  check_ws_subscribe.py  dashboard.py  docker-compose.yml  main.py  optimization_results.csv  optimize.py  pyproject.toml  simulate_fake_trading.py  start_live.sh
analysis/: reporting.py
backend/: Cargo.toml  README.md  docker-compose.yml  main.py  pyproject.toml
backend/app/engine/: Dockerfile  Makefile  main.py  pyproject.toml
backend/app/engine/tests/: conftest.py  test_backtest_artifacts_v23.py  test_backtest_pipeline_features.py  test_config_loader.py  test_dataset_store.py  test_experiment_reproducibility.py  test_factors_ma.py  test_golden_backtest.py  test_main_cli.py  test_metrics_v23.py  test_parity_volatility.py  test_plotter_heatmap_grid.py  test_pnl.py  test_signal_trace.py  test_sizing_v23.py  test_sweep_scoring_and_filters.py  test_vector_backtest.py  test_walkforward_smoke.py  test_worker_smoke.py
backend/app/engine/tests/archived/: test_client_order_id_dedup.py
backend/app/engine/tests/fixtures/golden/: BTCUSDT_1h.csv
backend/app/engine/zenith/analysis/metrics/: metrics_canon.py
backend/app/engine/zenith/analysis/research/: __init__.py  experiment.py  schemas.py
backend/app/engine/zenith/common/config/: schema.py
backend/app/engine/zenith/common/models/: models.py
backend/app/engine/zenith/common/utils/: logging.py  sizer.py
backend/app/engine/zenith/core/: __init__.py  backtest_engine.py  worker.py
backend/app/engine/zenith/core/sources/: event_source.py
backend/app/engine/zenith/database/: __init__.py  backtest_db.py
backend/app/engine/zenith/execution/: __init__.py  abstract_broker.py  backtest_broker.py  paper_broker.py
backend/app/engine/zenith/execution/execution/: simulator.py
backend/app/engine/zenith/extensions/: rust_wrapper.py
backend/app/engine/zenith/strategies/: registry.py  simple_ma.py
backend/app/engine/zenith/strategies/factors/: ema.py  registry.py
backend/app/engine/zenith/strategies/risk/: manager.py
backend/app/engine/zenith/strategies/sizing/: base.py
backups/: README.md
broker/: abstract_broker.py  backtest.py  backtest_broker.py  base.py  binance.py  live_broker.py  mock.py  order_manager.py  paper_broker.py
common/: README.md
config/: .env.example  config.example.yml  config.yml  config_bench.yml  config_paper_test.yml  config_volatility.yml  config_volatility_sweep.yml  golden_backtest.yml
core/: backtest.py
data/: BTC_USDT_1d.csv  BTC_USDT_1h.csv  ETH_USDT_1d.csv  SOL_USDT_1d.csv  sample_btc.csv
database/: README.md  __init__.py  dataset_store.py
docs/: DATABASE_MANAGEMENT.md  README.md  architecture.md  rust_factors_guide.md  vector_backtest_contract.md
documents/: README.md  architecture.md  backtest_logic.md  sequence_diagram.md
engine/: backtest_engine.py  backtest_runner.py  base_engine.py  batch_backtest.py  optimization_engine.py  (+6 more)
(+299 files in other folders)
