[project]
name = "zenith-algo"
version = "0.1.0"
description = "High-frequency crypto trading system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "websockets>=11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strategies", "core", "config", "gateways", "utils"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0"
]
